<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:ignore="NamespaceTypo"
    android:id="@+id/viewContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-80dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/green_500"
            android:textSize="50dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtUser"
            style="@style/Widget.Limeade.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:hint="@string/user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userName"
                style="@style/Widget.Limeade.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPwd"
            style="@style/Widget.Limeade.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:hint="@string/pwd">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                style="@style/Widget.Limeade.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignIn"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:text="@string/sign"
                app:icon="@drawable/ic_login"
                app:iconGravity="textTop"
                app:iconPadding="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/register"
                app:icon="@drawable/ic_register"
                app:iconGravity="textTop"
                app:iconPadding="20dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>